--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,5 @@ opensrf_download_url: "https://evergreen-ils.org/downloads/opensrf-{{ opensrf_ve
 opensrf_src_directory: '/home/opensrf/opensrf-{{ opensrf_version }}'
 
 evergreen_install_prefix: '/openils'
+
+opensrf_configure_options: "--prefix={{ evergreen_install_prefix }} --sysconfdir={{ evergreen_install_prefix }}/conf"
