reference install and configure from main playbook

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,12 @@
 - name: Setup / Install OpenSRF Prerequisites
   include_tasks: prerequisites.yml
   become: true
+  tags: "opensrf-configure"
+- name: Setup / Install OpenSRF
+  include_tasks: installation.yml
+  become: true
+  tags: "opensrf-install"
+- name: Configure OpenSRF
+  include_tasks: configure.yml
+  become: true
+  tags: "opensrf-configure"
