--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,25 +1,25 @@
 ---
 - name: Setup / Install OpenSRF Prerequisites
-  include_tasks: prerequisites.yml
-  become: true
-  args:
+  include_tasks: 
+    file: prerequisites.yml
     apply:
+      become: true
       tags:
         - opensrf-prereqs
   tags: "opensrf-prereqs"
 - name: Setup / Install OpenSRF
-  include_tasks: installation.yml
-  become: true
-  args:
+  include_tasks: 
+    file: installation.yml
     apply:
+      become: true
       tags:
         - opensrf-install
   tags: "opensrf-install"
 - name: Configure OpenSRF
-  include_tasks: configure.yml
-  become: true
-  args:
+  include_tasks: 
+    file: configure.yml
     apply:
+      become: true
       tags:
         - opensrf-configure
   tags: "opensrf-configure"
