--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,3 +20,60 @@ opensrf_ejabberd_public_users:
     password: password
   opensrf:
     password: password
+
+opensrf_prerequisites:
+  - autoconf
+  - automake
+  - build-essential
+  - check
+  - ejabberd
+  - less
+  - libapache2-mod-perl2
+  - libcache-memcached-perl
+  - libclass-dbi-abstractsearch-perl
+  - libclass-dbi-sqlite-perl
+  - libncurses5-dev
+  - libdatetime-format-builder-perl
+  - libdatetime-format-mail-perl
+  - libdatetime-perl
+  - libdatetime-timezone-perl
+  - liberror-perl
+  - libexpat1-dev
+  - libfile-find-rule-perl
+  - libgcrypt11-dev
+  - libgdbm-dev
+  - liblog-log4perl-perl
+  - libmemcached-dev
+  - libmemcached-tools
+  - libmodule-build-perl
+  - libnet-dns-perl
+  - libperl-dev
+  - libreadline-dev
+  - libtemplate-perl
+  - libtest-pod-perl
+  - libtie-ixhash-perl
+  - libtool
+  - libuniversal-require-perl
+  - libunix-syslog-perl
+  - libwww-perl
+  - libxml2-dev
+  - libxml-libxml-perl
+  - libxml-libxslt-perl
+  - libxml-simple-perl
+  - libxslt1-dev
+  - make
+  - memcached
+  - pkg-config
+  - python-coverage
+  - psmisc
+  - python-dev
+  - python-libxml2
+  - python-memcache
+  - python-nose
+  - python-pyxmpp
+  - python-setuptools
+  - python-simplejson
+  - tar
+  - unzip
+  - zip
+  - zlib1g-dev
