--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,8 @@ opensrf_ejabberd_public_users:
     password: password
 
 opensrf_prerequisites:
+  - apache2
+  - apache2-dev
   - autoconf
   - automake
   - build-essential
@@ -34,6 +36,7 @@ opensrf_prerequisites:
   - libclass-dbi-sqlite-perl
   - libncurses5-dev
   - libdatetime-format-builder-perl
+  - libdatetime-format-iso8601-perl
   - libdatetime-format-mail-perl
   - libdatetime-perl
   - libdatetime-timezone-perl
@@ -42,11 +45,13 @@ opensrf_prerequisites:
   - libfile-find-rule-perl
   - libgcrypt11-dev
   - libgdbm-dev
+  - libjson-xs-perl
   - liblog-log4perl-perl
   - libmemcached-dev
   - libmemcached-tools
   - libmodule-build-perl
   - libnet-dns-perl
+  - libnet-server-perl
   - libperl-dev
   - libreadline-dev
   - libtemplate-perl
