--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -55,13 +55,13 @@
   with_items:
     - opensrf.xml
     - opensrf_core.xml
-  when: no_evergreen
+  when: no_evergreen|bool
 
 - name: Configure srfsh for opensrf user
   template:
     src: srfsh.xml.j2
     dest: /home/opensrf/.srfsh.xml
-  when: no_evergreen
+  when: no_evergreen|bool
 
 - name: Make sure permissions are right
   file:
