enable python support in case we want it at some point so don't have to recompile

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,7 +7,7 @@ opensrf_src_directory: '/home/opensrf/opensrf-{{ opensrf_version }}'
 no_evergreen: true
 opensrf_install_prefix: '/openils'
 
-opensrf_configure_options: "--prefix={{ opensrf_install_prefix }} --sysconfdir={{ opensrf_install_prefix }}/conf"
+opensrf_configure_options: "--enable-python --prefix={{ opensrf_install_prefix }} --sysconfdir={{ opensrf_install_prefix }}/conf"
 
 opensrf_ejabberd_private_users:
   router:
