--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@ opensrf_version: '3.2.0'
 opensrf_download_url: "https://evergreen-ils.org/downloads/opensrf-{{ opensrf_version }}.tar.gz"
 opensrf_src_directory: '/home/opensrf/opensrf-{{ opensrf_version }}'
 
-no_evergreen: true
+opensrf_no_evergreen: true
 opensrf_install_prefix: '/openils'
 
 opensrf_configure_options: "--enable-python --prefix={{ opensrf_install_prefix }} --sysconfdir={{ opensrf_install_prefix }}/conf"
