--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,8 @@ opensrf_install_prefix: '/openils'
 
 opensrf_configure_options: "--enable-python --prefix={{ opensrf_install_prefix }} --sysconfdir={{ opensrf_install_prefix }}/conf"
 
+opensrf_ejabberd_max_stanza_size: 65536
+ 
 opensrf_ejabberd_private_users:
   router:
     password: password
