--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,11 +6,12 @@ opensrf_src_directory: '/home/opensrf/opensrf-{{ opensrf_version }}'
 
 opensrf_no_evergreen: true
 opensrf_install_prefix: '/openils'
+opensrf_system_user: 'opensrf'
 
 opensrf_configure_options: "--enable-python --prefix={{ opensrf_install_prefix }} --sysconfdir={{ opensrf_install_prefix }}/conf"
 
 opensrf_ejabberd_max_stanza_size: 65536
- 
+
 opensrf_ejabberd_private_users:
   router:
     password: password
